# src/routes/authentication-route.js
@@ -21,9 +21,7 @@ router.post('/register', authenticationsController.register);
  *     post:
  *       tags:
  *         - Authentications
- *       summary: 
  *       description: Login to system
- *       operationId: Login
  *       requestBody:
  *         description: Login with username and password
  *         content:
@@ -44,7 +42,7 @@ router.post('/register', authenticationsController.register);
  *           content:
  *             application/json:
  *               schema:
- *                 $ref: '#/components/schemas/User' 
+ *                 $ref: '#/components/schemas/User'
  *         '400':
  *           description: Invalid ID supplied
  *         '404':
@@ -57,54 +55,60 @@ router.post('/login', authenticationsController.login);
 
 /**
  * @swagger
- * /authentications/refresh-token:
- *  post:
- *    tags:
- *      - Authentications
- *    description: Refresh Token
- *    requestBody:
+ * paths:
+ *   /authentications/refresh-token:
+ *    post:
+ *      tags:
+ *        - Authentications
  *      description: Refresh Token
- *      content:
- *        application/json:
- *          schema:
- *            type: object
- *            properties:
- *              refreshToken:
- *                type: string
- *    responses:
- *      '200':
- *        '400':
- *          description: Bad Request
- *        '404':
- *          description: User not found
- *        '405':
- *          description: Validation exception
- *        description: OK
+ *      requestBody:
+ *        description: Refresh Token
  *        content:
  *          application/json:
  *            schema:
- *              $ref: '#/components/schemas/User'
+ *              type: object
+ *              properties:
+ *                refreshToken:
+ *                  type: string
+ *      responses:
+ *          '200':
+ *            description: OK
+ *            content:
+ *                application/json:
+ *                  schema:
+ *                    $ref: '#/components/schemas/User'
+ *          '400':
+ *            description: Bad Request
+ *          '404':
+ *            description: User not found
+ *          '405':
+ *            description: Validation exception
 */
 router.post('/refresh-token', authenticationsController.refreshToken);
 
 /**
  * @swagger
- * /authentications/logout:
- *  post:
- *    tags:
- *      - Authentications
- *    description: ''
- *    requestBody:
- *      content:
- *        application/json:
- *          schema:
- *            type: object
- *            properties:
- *              refreshToken:
- *                type: string
- *    responses:
- *      '200':
- *        description: OK
+ * paths:
+ *   /authentications/logout:
+ *    post:
+ *      tags:
+ *        - Authentications
+ *      description: ''
+ *      requestBody:
+ *        content:
+ *          application/json:
+ *            schema:
+ *              type: object
+ *              properties:
+ *                refreshToken:
+ *                  type: string
+ *      responses:
+ *        '200':
+ *          description: OK
+ *        '401':
+ *          $ref: '#/components/responses/unauthorizedError'
+ *      security:
+ *        - bearerAuth: []
  */
 router.post('/logout', authMiddleware, authenticationsController.logout);
 
